--- a/styles/colors-old.less
+++ b/styles/colors-old.less
@@ -4,19 +4,19 @@
 @light-gray: #f1dadd;
 @gray: #5e727a;
 @dark-gray: #1e2528;
-@very-dark-gray: #140d13;
+@very-dark-gray: #221c1a;
 
 @cyan: #8abeb7;
-@blue: #138eff;
-@lightblue: #2bb3f6;
-@babyblue: #6bd3ff;
+@blue: #48b1f5;
+@lightblue: lighten(@blue, 11%);
+@babyblue: lighten(@blue, 22%);
 @purple: #7832ec;
 @green: #a1ec5e;
-@red: #31ed71;
+@red: #48f58c;
 @dark-green: #41d77c;
 @red2: #ff4f7f;
 @lightred: lighten(@red, 13%);
 @pink: #ff42c5;
 @dark-orange: #f7c220;
-@orange: #f1b313;
-@light-orange: #f1de33;
+@orange: #f5e348;
+@light-orange: #f5e348;
