--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -4,7 +4,7 @@
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color: lighten(@blue, 22%);
+@syntax-text-color: @babyblue;
 @syntax-cursor-color: white;
 @syntax-selection-color: lighten(@dark-gray, 10%);
 @syntax-background-color: @very-dark-gray;
